# dealii-sthdg-slabbyslab

./: .gitignore  CMakeLists.txt  README.md  sthdg-advdif-slabbyslab.cc
misc/: makeflags.diff
